--- a/force-app/main/default/lwc/calculateSum/calculateSum.html
+++ b/force-app/main/default/lwc/calculateSum/calculateSum.html
@@ -1,10 +1,12 @@
 <template>
     <lightning-card  title="Calculate Sum">
-        <lightning-button label="Submit" slot="actions" onclick={handleClick}></lightning-button>
         <p class="slds-p-horizontal_small">
-            <lightning-input type="number" name="fNumber" label="Enter first number" value={fstNumber} onchange={handleChange}></lightning-input>
-            <lightning-input type="number" name="sNumber" label="Enter second number" value={scdNumber} onchange={handleChange}></lightning-input>
+            <lightning-input type="number" name="fNumber" label="Enter first number" required="" placeholder="type here..." value={fstNumber} onchange={handleChange}></lightning-input>
+            <lightning-input type="number" name="sNumber" label="Enter second number" required="" placeholder="type here..." value={scdNumber} onchange={handleChange}></lightning-input>
+            <br/>
+            <lightning-button label="Submit" slot="actions" onclick={handleClick} class="slds-align_absolute-center"></lightning-button>
         </p>
+        
         <p slot="footer"><b>{sum}</b></p>
     </lightning-card>
 </template>
