--- a/force-app/main/default/lwc/parent/parent.html
+++ b/force-app/main/default/lwc/parent/parent.html
@@ -1,8 +1,21 @@
 <template>
-    <lightning-card  title="Parent to Child">
-        <lightning-button label="Send Data to Child" variant="Brand" onclick={sendDataToChild}></lightning-button>
-        <!-- <p class="slds-p-horizontal_small">{parentMessage}</p> -->
-      <!--  <p slot="footer">Card Footer</p> -->
-      <c-child message-in-child={parentMessage}></c-child>
-    </lightning-card>
+<!--  <lightning-card  title="Parent to Child" icon>
+    <p>
+    <lightning-button label="Send Data to Child" variant="Brand" onclick={sendDataToChild}></lightning-button>
+    </p> -->
+    <!-- <p class="slds-p-horizontal_small">{parentMessage}</p> -->
+    <!--  <p slot="footer">Card Footer</p> -->
+<!--</lightning-card>
+<p><c-child message-in-child={parentMessage}></c-child> </p> -->
+
+<lightning-card>
+<h3 slot="title">
+    <lightning-icon icon-name="utility:connected_apps" size="small"></lightning-icon>
+    Parent Component
+</h3>
+<p class="slds-p-horizontal_small">
+    <lightning-button label="Send Data to Child" variant="Brand" onclick={sendDataToChild}></lightning-button>    
+</p>
+</lightning-card>
+<c-child message-in-child={parentMessage}></c-child>
 </template>
